# display-layout-manager

./: .coverage  .pre-commit-config.yaml  ARCHITECTURE.md  ARCHITECTURE_JP.md  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  Makefile  README.md  README_JP.md  pyproject.toml  requirements.txt  setup.py  test_menubar_fixed.py
.github/workflows/: release.yml  test.yml
Formula/: display-layout-manager.rb
docs/: configuration.md  configuration_jp.md  troubleshooting.md  troubleshooting_jp.md
scripts/: release.sh
src/display_layout_manager/: __init__.py  auto_launch_manager.py  cli_bridge.py  command_executor.py  command_scheduler.py  config_manager.py  configuration_watcher.py  daemon_manager.py  dependency_manager.py  display_manager.py  display_monitor.py  error_handler.py  event_processor.py  integration_test.py  layout_saver.py  logger.py  main.py  menubar.py  menubar_app.py  notification_manager.py  pattern_matcher.py  single_instance_manager.py
src/display_layout_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/display_layout_manager/i18n/: __init__.py  locale_detector.py  message_catalog.py  message_manager.py
tests/: run_all_tests.py  run_coverage.py  test_cli_components.py  test_command_executor.py  test_dependency_manager.py  test_display_manager.py  test_i18n.py  test_i18n_integration.py  test_layout_saver.py  test_menubar_app.py  test_menubar_checkbox.py  test_menubar_initialization.py  test_menubar_integration.py  test_menubar_logic.py  test_multi_display.py  test_single_instance_manager.py
